--- a/client/src/components/sing-up/style.sass
+++ b/client/src/components/sing-up/style.sass
@@ -41,7 +41,6 @@ input[type="button"]:disabled
 .buttons
   display: flex
   justify-content: space-around
-  padding-top: 1rem
 
 .SingUpHeader, .accept, .nombresInputs, h4, .fechaInput, .buttons
   grid-column: span 2
@@ -59,28 +58,36 @@ span
   background: #faebd7
   height: fit-content
 
-.progressBarContainer
+.ProgressBar
   position: sticky
   top: 1rem
   width: inherit
 
 .nombresInputs
-  height: 26vh
   display: flex
   justify-content: end
 
+  input
+    margin-top: 1%
+    margin-bottom: 1%
+
 .fechaInput
-  height: 26vh
+  height: 28vh
   display: flex
-  align-items: center
+  flex-flow: column
+  justify-content: center
 
 .contactosInputs
-  height: 26vh
+  height: 28vh
   display: flex
   justify-content: center
 
+.buttonClose
+  grid-column: span 2
+  width: inherit
+
 .Thanks
-  height: 18.5vh
+  height: 20vh
   display: flex
   flex-flow: column
 
