--- a/client/src/components/sing-up/style.css
+++ b/client/src/components/sing-up/style.css
@@ -12,6 +12,7 @@
   bottom: 0;
   right: 2rem;
   display: grid;
+  background: white;
 }
 
 .completed {
@@ -30,9 +31,16 @@
 }
 
 input[type=button] {
-  border-radius: 2rem;
+  border-radius: 1rem;
   padding: 0.4rem 0.7rem;
   cursor: pointer;
+  width: -webkit-fit-content;
+  width: -moz-fit-content;
+  width: fit-content;
+  height: -webkit-fit-content;
+  height: -moz-fit-content;
+  height: fit-content;
+  align-self: end;
 }
 
 input[type=button]:disabled {
@@ -87,14 +95,18 @@ span {
 }
 
 .fechaInput {
-  height: 28vh;
+  height: 30vh;
   display: flex;
   flex-flow: column;
   justify-content: center;
 }
 
+h4 {
+  margin-top: 2rem;
+}
+
 .contactosInputs {
-  height: 28vh;
+  height: 30vh;
   display: flex;
   justify-content: center;
 }
@@ -102,13 +114,21 @@ span {
 .buttonClose {
   grid-column: span 2;
   width: inherit;
+  justify-self: center;
 }
 
 .Thanks {
-  height: 20vh;
+  height: 22vh;
   display: flex;
   flex-flow: column;
 }
 .Thanks p {
   margin: 0;
+}
+
+.completed {
+  padding: 1rem;
+}
+.completed p {
+  text-align: center;
 }/*# sourceMappingURL=style.css.map */
